--- a/SampleProjects/Client/Pages/Customer_Edit.razor
+++ b/SampleProjects/Client/Pages/Customer_Edit.razor
@@ -1,8 +1,9 @@
-﻿@page "/Customer_Create"
-<h3>Customer_Create</h3>
+﻿@page "/Customer_Edit/{Id:int}"
+<h3>Customer_Edit</h3>
 
-<EditForm Model="@customerVM" OnValidSubmit="Create" class="card card-body bg-light">
+<EditForm Model="@customerVM" OnValidSubmit="Edit" class="card card-body bg-light">
     <div class="mb-3 col-xl-5">
+        <input type="hidden" value="@customerVM.Id" />
         <InputText id="@nameof(customerVM.FirstName)" @bind-Value="customerVM.FirstName" class="form-control" />
     </div>
     <div class="mb-3 col-xl-5">
@@ -12,7 +13,7 @@
         <InputText id="@nameof(customerVM.Mobile)" @bind-Value="customerVM.Mobile" class="form-control" />
     </div>
     <div class="mb-3 col-xl-5">
-        <button type="submit" class="btn btn-primary">ذخیره</button>
+        <button type="submit" class="btn btn-primary">ویرایش</button>
     </div>
 </EditForm>
 
