--- a/SampleProjects/Client/Pages/Customer_Create.razor
+++ b/SampleProjects/Client/Pages/Customer_Create.razor
@@ -12,7 +12,7 @@
         <InputText id="@nameof(customerVM.Mobile)" @bind-Value="customerVM.Mobile" class="form-control" />
     </div>
     <div class="mb-3 col-xl-5">
-        <button type="submit" class="btn btn-primary">ذخیره</button>
+        <button type="submit" class="btn btn-primary">Save</button>
     </div>
 </EditForm>
 
