--- a/SampleProjects/Client/Pages/Customer_Edit.razor
+++ b/SampleProjects/Client/Pages/Customer_Edit.razor
@@ -13,7 +13,7 @@
         <InputText id="@nameof(customerVM.Mobile)" @bind-Value="customerVM.Mobile" class="form-control" />
     </div>
     <div class="mb-3 col-xl-5">
-        <button type="submit" class="btn btn-primary">ویرایش</button>
+        <button type="submit" class="btn btn-primary">Update</button>
     </div>
 </EditForm>
 
