--- a/SampleProjects/Client/Pages/Product_Create.razor
+++ b/SampleProjects/Client/Pages/Product_Create.razor
@@ -9,7 +9,7 @@
         <input type="text" id="@nameof(productVM.Price)" @bind-value="@productVM.Price" class="form-control" />
     </div>
     <div class="mb-3 col-xl-5">
-        <button type="submit" class="btn btn-primary">ذخیره</button>
+        <button type="submit" class="btn btn-primary">Save</button>
     </div>
 </EditForm>
 
