--- a/SampleProjects/Client/Pages/Product_Create.razor
+++ b/SampleProjects/Client/Pages/Product_Create.razor
@@ -1,6 +1,8 @@
 ﻿@page "/Product_Create"
 <h3>Product Create</h3>
-
+<p>
+    This component insert product data to the server.
+</p>
 <EditForm Model="@productVM" OnValidSubmit="Create" class="card card-body bg-light">
     <div class="mb-3 col-xl-5">
         <InputText id="@nameof(productVM.Name)" @bind-Value="productVM.Name" class="form-control" />
